src/style.css
/* Importing fonts */
@font-face {
  font-family: 'Outfit';
  src: url('./fonts/outfit.ttf');
}

/* Variables */
:root {
  --primary: #1a2b33;
  --secondary: #1e3640;
  --grey: #a9bec8;
  --dark-cyan: #34c3be;
  --lighten-yellow: #f2b138;
  --white: #fffbfb;
}

/* Global styles */
html {
  box-sizing: border-box;
  font-family: 'Outfit', system-ui, 'Segoe UI', Helvetica, Arial, sans-serif,
    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
  min-height: 100vh;
  background-color: var(--primary);
  text-transform: uppercase;
}

*,
*::before,
*::after {
  /* CSS Reset */
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  /* Disable text selection */
  -webkit-tap-highlight-color: transparent;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  /* Catch errors */
  font-family: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

header {
  width: 85%;
  height: 100px;
}

button {
  color: var(--primary);
  border: none;
  border-radius: 5px;
  outline: none;
  font-size: 1.5rem;
  cursor: pointer;
  box-shadow: inset 0 -3px 2px rgba(0, 0, 0, 0.3);
  transition: all 0.3s ease;
}

/*** Game ***/

.game {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto auto 1fr;
  justify-items: center;
  align-items: center;
}

/* Game Header */

.game header {
  grid-column: 1 / -1;
  grid-row: 1 / 2;
  display: flex;
  align-items: center;
}

/* Game Actions */

.game__actions {
  position: fixed;
  right: 40px;
  top: 32px;
  display: flex;
  align-items: center;
  gap: 30px;
}

.game__restart,
.game__quit {
  width: 50px;
  height: 50px;
  background-color: var(--grey);
}

.game__restart img,
.game__quit img {
  width: 30px;
  height: 30px;
}

/* Game Status */

.game__status {
  grid-column: 1 / -1;
  grid-row: 2 / 3;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 30px;
  color: var(--grey);
  border: 1px solid var(--secondary);
}

/* Game Status Player */

.game__status-player {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  border: 1px solid var(--secondary);
}

.game__status-player-id {
  display: flex;
  gap: 5px;
  justify-content: center;
  align-items: center;
  background-color: var(--secondary);
  padding: 10px;
  min-width: 162px;
}

.game__status-player-symbol img {
  width: 15px;
  height: 15px;
}

.game__status-player-name {
  font-size: 1rem;
  font-weight: 700;
  margin-top: -3px;
}

.game__status-player-icon {
  grid-column: 1 / -1;
}

.game__status-player-icon img {
  width: 80px;
  height: 80px;
}

/* Game Status Message */

.game__status-message {
  display: flex;
  align-items: center;
  gap: 20px;
  font-size: 2.5rem;
  font-weight: 700;
  letter-spacing: 0.1rem;
  border: 1px solid var(--secondary);
  border-radius: 5px;
  padding: 10px 100px;
}

.status-message__turn-icon {
  background: url(./assets/icon-x.svg) no-repeat center / 100%;
  width: 30px;
  height: 30px;
}

/* Game Board */

.game main {
  grid-column: 1 / 2;
  grid-row: 3 / -1;
  margin: 30px 0;
}

.game__board {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
  gap: 30px;
  justify-items: center;
  align-items: center;
}

.game__board-cell {
  width: 120px;
  height: 120px;
  background-color: var(--secondary);
  outline: 2px solid rgba(255, 255, 255, 0.2);
  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
}

/*** Game-Initializer ***/

.game-initializer {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* Game-Initializer Header */

.game-initializer header {
  width: 85%;
  height: 100px;
  display: flex;
  justify-content: left;
  align-items: center;
}

.game-initializer main {
  width: 70%;
}

/* Game-Initializer Options */

.game-initializer__options {
  display: grid;
  grid-template-columns: repeat(2, minmax(300px, 500px));
  grid-gap: 20px;
  justify-items: center;
  justify-content: center;
  align-content: center;
}

/* Game Initializer Player */

.game-initializer__options .player {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  border: 1px solid var(--secondary);
  border-radius: 5px;
  padding-bottom: 20px;
}

/* Options Player Symbol */

.player .player__symbol {
  width: 100%;
  background-color: var(--secondary);
  display: flex;
  justify-content: center;
  padding: 10px;
}

.player__symbol img {
  width: 40px;
}

/* Options Player Icon */

.player .player__icon {
  margin-top: 10px;
}

/* Options Player Type-Selector */

.player__type-selector {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 10px;
  justify-items: center;
  align-items: center;
  width: 60%;
  height: 50px;
  border-radius: 5px;
  background: var(--secondary);
  position: relative;
  margin-bottom: 20px;
}

.player__type-selector input[type='radio'] {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  transition-duration: 0.3s;
  cursor: pointer;
  position: absolute;
  width: 50%;
  height: 100%;
}

.player__type-selector input[type='radio']:first-of-type {
  left: 0;
}

.player__type-selector input[type='radio']:last-of-type {
  right: 0;
}

.player__type-selector label {
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--grey);
  font-size: 1.5rem;
  font-weight: 700;
  font-style: italic;
  cursor: pointer;
  width: 100%;
  height: 100%;
  border-radius: 5px;
  padding: 10px;
  transition: all 0.3s ease;
}

.player__type-selector input[type='radio']:checked + label {
  background-color: var(--grey);
  color: var(--primary);
}

/* Options Player Player-Name */
/* Options Player AI-Type */

.player__name,
.player__ai-type {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.player__name input[type='text'],
.player__ai-type select {
  width: 60%;
  height: 40px;
  padding: 5px;
  font-size: 1.3rem;
  font-weight: 600;
  outline: none;
  color: var(--primary);
  background-color: var(--grey);
  border: none;
  border-radius: 5px;
}

.player__name label,
.player__ai-type label {
  border: 0;
  clip-path: rect(1px 1px 1px 1px); /* IE6, IE7 */
  clip-path: rect(1px, 1px, 1px, 1px);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.player__name input[type='text'] {
  transition: all 0.3s ease;
}

.player__name input[type='text']::placeholder {
  color: var(--primary);
  opacity: 0.5;
  text-transform: none;
  font-weight: 400;
}

.player__name input[type='text'].invalid::placeholder {
  color: var(--white);
}

/* Options Start-Game */

.game-initializer__start {
  grid-column: 1 / -1;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.start-game-btn {
  width: 35%;
  height: 64px;
  padding-bottom: 5px;
  background-color: var(--lighten-yellow);
  font-weight: 700;
}

/* Result-Modal */

.result-modal {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: fixed;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  background-color: var(--secondary);
  text-align: center;
  padding: 40px 0;
  box-shadow: 0 0 0 100vh rgba(0, 0, 0, 0.3);
  width: 100%;
}

.result-modal__content {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: clamp(300px, 50%, 500px);
}

/* Result-Modal Header */

.result-modal__header {
  display: grid;
  grid-template-columns: 1fr;
}

.result-modal__title {
  font-size: 1.8rem;
  font-weight: 700;
  color: var(--grey);
}

.result-modal__close-btn {
  position: absolute;
  right: 14px;
  top: 14px;
  background-color: transparent;
  box-shadow: none;
}

.result-modal__close-btn img {
  width: 30px;
  height: 30px;
}

/* Result-Modal Body */

.result-modal__message {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
  font-size: 2.4rem;
  font-weight: 500;
  color: var(--dark-cyan);
}

.result-modal__winner-symbol {
  background: url(./assets/icon-x.svg) no-repeat center / 100%;
  width: 45px;
  height: 45px;
}

/* Result-Modal Footer */

.result-modal__footer {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
  padding-top: 26px;
}

.result-modal__restart-btn,
.result-modal__quit-btn {
  width: 50%;
  height: 56px;
  padding-bottom: 5px;
  background-color: var(--lighten-yellow);
  font-weight: 600;
}

.result-modal__restart-btn {
  background-color: var(--lighten-yellow);
}

.result-modal__quit-btn {
  background-color: var(--grey);
}

/*** Misc ***/

/* Used to hide elements via JavaScript */
.disabled {
  display: none;
}

.clicked {
  transform: scale(0.95) translateY(5px);
  box-shadow: 0 0 0, inset 0 2px 10px rgba(0, 0, 0, 0.4);
  filter: brightness(1.2);
}

.invalid {
  border: 2px solid #b92326 !important;
  background-color: rgba(185, 35, 38, 0.2) !important;
}

